--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# 학습내용\n",
     "\n",
@@ -48,7 +52,7 @@
    "execution_count": 25,
    "metadata": {
     "slideshow": {
-     "slide_type": "skip"
+     "slide_type": "slide"
     }
    },
    "outputs": [],
@@ -249,7 +253,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "fragment"
     }
    },
    "source": [
@@ -432,133 +436,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>category_id</th>\n",
-       "      <th>views</th>\n",
-       "      <th>likes</th>\n",
-       "      <th>dislikes</th>\n",
-       "      <th>comment_count</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>33023.000000</td>\n",
-       "      <td>3.302300e+04</td>\n",
-       "      <td>3.302300e+04</td>\n",
-       "      <td>3.302300e+04</td>\n",
-       "      <td>3.302300e+04</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>21.151985</td>\n",
-       "      <td>4.206037e+05</td>\n",
-       "      <td>1.181485e+04</td>\n",
-       "      <td>5.332303e+02</td>\n",
-       "      <td>1.991526e+03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>6.669264</td>\n",
-       "      <td>2.427884e+06</td>\n",
-       "      <td>1.155629e+05</td>\n",
-       "      <td>1.398592e+04</td>\n",
-       "      <td>2.167840e+04</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>2.050000e+03</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>22.000000</td>\n",
-       "      <td>4.774100e+04</td>\n",
-       "      <td>4.110000e+02</td>\n",
-       "      <td>2.100000e+01</td>\n",
-       "      <td>1.050000e+02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>24.000000</td>\n",
-       "      <td>1.111940e+05</td>\n",
-       "      <td>1.386000e+03</td>\n",
-       "      <td>6.500000e+01</td>\n",
-       "      <td>3.440000e+02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>25.000000</td>\n",
-       "      <td>2.786070e+05</td>\n",
-       "      <td>3.691000e+03</td>\n",
-       "      <td>1.740000e+02</td>\n",
-       "      <td>9.250000e+02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>44.000000</td>\n",
-       "      <td>1.138762e+08</td>\n",
-       "      <td>5.150839e+06</td>\n",
-       "      <td>1.470388e+06</td>\n",
-       "      <td>1.142274e+06</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        category_id         views         likes      dislikes  comment_count\n",
-       "count  33023.000000  3.302300e+04  3.302300e+04  3.302300e+04   3.302300e+04\n",
-       "mean      21.151985  4.206037e+05  1.181485e+04  5.332303e+02   1.991526e+03\n",
-       "std        6.669264  2.427884e+06  1.155629e+05  1.398592e+04   2.167840e+04\n",
-       "min        1.000000  2.050000e+03  0.000000e+00  0.000000e+00   0.000000e+00\n",
-       "25%       22.000000  4.774100e+04  4.110000e+02  2.100000e+01   1.050000e+02\n",
-       "50%       24.000000  1.111940e+05  1.386000e+03  6.500000e+01   3.440000e+02\n",
-       "75%       25.000000  2.786070e+05  3.691000e+03  1.740000e+02   9.250000e+02\n",
-       "max       44.000000  1.138762e+08  5.150839e+06  1.470388e+06   1.142274e+06"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {
     "slideshow": {
@@ -632,7 +509,7 @@
     }
    },
    "source": [
-    "`다음처럼 분포를 그려볼 수 없을 때, \n",
+    "`방금처럼 분포를 그려볼 수 없을 때, \n",
     "이 분포의 특성을 나타내는 몇가지 숫자로 데이터의 분포에 대한 정보를 줄 수 있는데, 이 숫자들이 기술통계량이다. `\n",
     "\n",
     "**(근데 우리는 21세기에 살고 있다. 그냥 그래프로...)**"
@@ -804,25 +681,14 @@
     "    \n",
     "    1.개별 데이터 설명\n",
     "    2.데이터간의 관계\n",
-    "    3.가설세우기 \n",
-    "    4.가설 검정하기"
+    "    3.가설 세우기 / 가설 검정"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1. 데이터 설명 \n",
-    "\n",
-    " - 개별 데이터에 대한 정보\n",
-    " - 데이터간의 관계에 대한 정보"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 개별데이터 탐구"
+    "### 1. 개별데이터 설명"
    ]
   },
   {
@@ -952,22 +818,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.trending_date = df.trending_date.apply(str2date)\n",
-    "df.publish_time = df.publish_time.apply(str2date2)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
+    "df.trending_date = df.trending_date.apply(str2date)\n",
+    "\n",
+    "df.publish_time = df.publish_time.apply(str2date2)\n",
+    "\n",
     "df[\"trending_lag\"] = df.trending_date - df.publish_time\n",
+    "\n",
     "df.trending_lag = df.trending_lag.apply(lambda x: x.days)\n",
+    "\n",
     "df.trending_lag = df.trending_lag.apply(lambda x: x if x < 50 else 50)"
    ]
   },
@@ -1003,7 +865,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 변수들간의 관계 탐구\n",
+    "### 2. 변수들간의 관계 탐구\n",
     "\n",
     " - 이 때는 주로 목적으로하는 변수를 중심으로 분석을 시작한다. \n",
     " - 이 케이스에서는 조회수를 타겟으로 하겠다."
@@ -1011,7 +873,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "##### Pairplot"
    ]
@@ -1019,7 +885,11 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1045,7 +915,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "##### Pearson 상관계수 ; $r, \\rho$\n",
     "\n",
@@ -1057,7 +931,11 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1078,7 +956,11 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1159,7 +1041,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "**상관계수 히트맵**"
    ]
@@ -1167,7 +1053,11 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1195,7 +1085,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#####  Pearson correlation 의 한계 \n",
     "  - Pearson 상관계수는 두 변수간의 선형적인 상관관계만을 나타내는 숫자이다. \n",
@@ -1205,7 +1099,11 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1236,7 +1134,11 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1253,7 +1155,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "##### 카테고리 변수와의 관계"
    ]
@@ -1261,7 +1167,11 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1524,9 +1434,13 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "### 가설 검정"
+    "### 3. 가설 검정"
    ]
   },
   {
@@ -1542,7 +1456,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "**조회 수가 많은 데이터는 무슨 특징이 있을까 ?**"
    ]
@@ -1550,7 +1468,11 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1715,7 +1637,11 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1891,7 +1817,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "**조회수 상위 10%의 카테고리들의 분포는 다를까?**"
    ]
@@ -1899,7 +1829,11 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1919,7 +1853,11 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1952,7 +1890,10 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "scrolled": false
+    "scrolled": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [
     {
@@ -1992,7 +1933,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "**방금과 같은 질문을 꾸준히 하다보면 주장하고 싶은 바가 생기고 이를 가설로 만들면 된다.**\n",
     "\n",
@@ -2013,7 +1958,11 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2034,7 +1983,11 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2054,7 +2007,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "**Conclusion of 1.**\n",
     "\n",
@@ -2063,7 +2020,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "**가설  2. 오전에 배포된 영상과 오후에 배포된 영상 간의 차이가 있을까?**\n",
     "\n",
@@ -2076,7 +2037,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "df[\"published_daytime\"] = df.publish_time.apply(\n",
@@ -2086,7 +2051,11 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2122,7 +2091,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "[댓글 수를 기준으로 다시 쓰면]\n",
     "\n",
